<resources>
    <string name="app_name">FeriasApp</string>
    <string name="title_activity_lista__conciertos">Lista_Conciertos</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="txt_date">Fecha del dia</string>
    <string name="content_log">Contenido de logo</string>
    <string name="btn_cultura">Cultura</string>
    <string name="btn_concierto">Conciertos</string>
    <string name="btn_patrocinadores">Patrocinadores</string>

    <string name="txt_cultura">Titulo de cultura</string>
    <string name="content_cultura">Contenido de imagen cultura</string>
    <string name="descrip_cultura">Descripcion de actividades culturales en el municipio de nahuala</string>

    <string name="txt_concierto">Titulo de Conciertos</string>
    <string name="content_concierto">Contenido de imagen conciertos</string>
    <string name="descrip_concierto">Descripcion de los conciertos en el municipio de nahuala</string>

    <string name="content_patrocinador">Contenido de imagen patrocinador</string>
    <string name="descrip_patrocinador">Información sobre su negocio datos generales</string>
    <string name="text_patrocinador">Redes sociales: </string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_lista__cultura">Lista_Cultura</string>
    <string name="title_activity_lista__patrocinadores">Lista_Patrocinadores</string>
    <string name="title_activity_mapa_general">Map</string>
    <string name="title_activity_maps">Map</string>
</resources>
