<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".conciertos.vista_conciertos">

    <TextView
        android:id="@+id/txt_titulo_concierto"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/txt_concierto"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/descript_concierto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384" />

    <ImageView
        android:id="@+id/imageConcierto"
        android:layout_width="match_parent"
        android:layout_height="447dp"
        android:contentDescription="@string/content_concierto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/descript_concierto"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="76dp"
        android:fontFamily="serif"
        android:text="@string/descrip_concierto"
        android:textAlignment="center"
        android:textColor="#00BCD4"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageEvents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.766" />


</androidx.constraintlayout.widget.ConstraintLayout>
